[gd_scene load_steps=9 format=2]

[ext_resource path="res://Themes/BattleHPbar.tres" type="Theme" id=1]
[ext_resource path="res://Scenes/AnimationEditor/AnimationEditor.gd" type="Script" id=2]
[ext_resource path="res://Scenes/AnimationEditor/AnimationDrawer.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/AnimationEditor/AnimationParent.gd" type="Script" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.160784, 0.160784, 0.160784, 1 )

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0, 0, 0, 0.792157 )

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.137255, 0.164706, 0.207843, 1 )
skew = Vector2( 0.17, 0 )
border_width_left = 334
border_color = Color( 0.207843, 0.137255, 0.137255, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 112
corner_radius_bottom_right = 5
corner_radius_bottom_left = 112
expand_margin_left = 40.0
expand_margin_right = 40.0
shadow_color = Color( 0, 0, 0, 0.372549 )
shadow_size = 97

[sub_resource type="ShaderMaterial" id=19]

[node name="AnimationEditor" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="AnimationDrawer" parent="." instance=ExtResource( 3 )]

[node name="PopupParent" type="PopupDialog" parent="."]
script = ExtResource( 8 )

[node name="Timeline" type="HBoxContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 278.0
margin_bottom = 310.0
rect_min_size = Vector2( 0, 32 )
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Timeline"]
margin_top = 9.0
margin_right = 60.0
margin_bottom = 23.0
text = "Timeline:"

[node name="Panel" type="ScrollContainer" parent="Timeline"]
margin_left = 64.0
margin_right = 1280.0
margin_bottom = 32.0
size_flags_horizontal = 3
custom_styles/bg = SubResource( 1 )
scroll_vertical_enabled = false

[node name="TimelineContainer" type="HBoxContainer" parent="Timeline/Panel"]
unique_name_in_owner = true
margin_right = 1216.0
margin_bottom = 32.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 1

[node name="TimelineControls" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 64.0
margin_top = 670.0
margin_bottom = 690.0

[node name="PlayButton" type="Button" parent="TimelineControls"]
margin_right = 54.0
margin_bottom = 20.0
text = "  Play  "

[node name="ZoomIn" type="Button" parent="TimelineControls"]
margin_left = 58.0
margin_right = 124.0
margin_bottom = 20.0
text = "Zoom In"
flat = true

[node name="ZoomOut" type="Button" parent="TimelineControls"]
margin_left = 128.0
margin_right = 205.0
margin_bottom = 20.0
text = "Zoom Out"
flat = true

[node name="AnimationMods" type="HBoxContainer" parent="."]
anchor_top = 0.972
anchor_right = 1.0
anchor_bottom = 1.061
margin_top = -11.84
margin_bottom = -43.92
rect_min_size = Vector2( 0, 32 )
theme = ExtResource( 1 )
custom_constants/separation = 17
alignment = 1

[node name="ParticlesDialog" type="Button" parent="AnimationMods"]
margin_left = 286.0
margin_right = 414.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 0 )
text = "Add Particles"

[node name="TransformDialog" type="Button" parent="AnimationMods"]
margin_left = 431.0
margin_right = 559.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 0 )
text = "Transform"

[node name="ModulateDialog" type="Button" parent="AnimationMods"]
margin_left = 576.0
margin_right = 704.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 0 )
text = "Modulate"

[node name="ShakeDialog" type="Button" parent="AnimationMods"]
margin_left = 721.0
margin_right = 849.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 0 )
text = "Shake"

[node name="WaitDialog" type="Button" parent="AnimationMods"]
margin_left = 866.0
margin_right = 994.0
margin_bottom = 32.0
rect_min_size = Vector2( 128, 0 )
text = "Wait"

[node name="Node2D" type="CanvasLayer" parent="."]

[node name="MoveSelector" type="PopupDialog" parent="Node2D"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -431.0
margin_top = -688.0
margin_right = -431.0
margin_bottom = -688.0
custom_styles/panel = SubResource( 17 )

[node name="Panel" type="Panel" parent="Node2D/MoveSelector"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -246.5
margin_top = -293.0
margin_right = 246.5
margin_bottom = 293.0
custom_styles/panel = SubResource( 18 )

[node name="HBoxContainer" type="VBoxContainer" parent="Node2D/MoveSelector/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="HBoxContainer" parent="Node2D/MoveSelector/Panel/HBoxContainer"]
margin_right = 493.0
margin_bottom = 28.0
alignment = 1

[node name="MoveSelectorTitle" type="Label" parent="Node2D/MoveSelector/Panel/HBoxContainer/VBoxContainer"]
margin_left = 196.0
margin_right = 246.0
margin_bottom = 28.0
theme = ExtResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Load"

[node name="Button" type="Button" parent="Node2D/MoveSelector/Panel/HBoxContainer/VBoxContainer"]
margin_left = 250.0
margin_right = 297.0
margin_bottom = 28.0
text = "Close"

[node name="ScrollContainer" type="ScrollContainer" parent="Node2D/MoveSelector/Panel/HBoxContainer"]
margin_top = 32.0
margin_right = 493.0
margin_bottom = 586.0
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="Node2D/MoveSelector/Panel/HBoxContainer/ScrollContainer"]
margin_right = 493.0
margin_bottom = 554.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BattleContainer" type="Node2D" parent="."]

[node name="PokemonSettings" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 1 )
custom_constants/separation = 56

[node name="Panel" type="Panel" parent="PokemonSettings"]
margin_right = 280.0
margin_bottom = 40.0
rect_min_size = Vector2( 280, 0 )
theme = ExtResource( 1 )

[node name="PlayerPokemon" type="Label" parent="PokemonSettings/Panel"]
margin_right = 105.0
margin_bottom = 14.0
theme = ExtResource( 1 )
text = "Player Pokémon"

[node name="PlayerPokemonID" type="SpinBox" parent="PokemonSettings/Panel"]
unique_name_in_owner = true
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -74.0
margin_top = -12.0
margin_bottom = 12.0
theme = ExtResource( 1 )
min_value = 1.0
value = 1.0

[node name="PlayerMouthPos" type="Button" parent="PokemonSettings/Panel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -10.0
margin_right = -115.0
margin_bottom = 11.0
rect_pivot_offset = Vector2( 80, 20 )
theme = ExtResource( 1 )
text = "set mouth pos"

[node name="Panel2" type="Panel" parent="PokemonSettings"]
margin_left = 336.0
margin_right = 616.0
margin_bottom = 40.0
rect_min_size = Vector2( 280, 0 )
theme = ExtResource( 1 )

[node name="EnemyPokemon" type="Label" parent="PokemonSettings/Panel2"]
margin_right = 107.0
margin_bottom = 14.0
theme = ExtResource( 1 )
text = "Enemy Pokémon"

[node name="EnemyPokemonID" type="SpinBox" parent="PokemonSettings/Panel2"]
unique_name_in_owner = true
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -74.0
margin_top = -12.0
margin_bottom = 12.0
theme = ExtResource( 1 )
min_value = 1.0
value = 1.0

[node name="EnemyMouthPos" type="Button" parent="PokemonSettings/Panel2"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -10.0
margin_right = -115.0
margin_bottom = 11.0
rect_pivot_offset = Vector2( 80, 20 )
theme = ExtResource( 1 )
text = "set mouth pos"

[node name="Panel3" type="Panel" parent="PokemonSettings"]
margin_left = 672.0
margin_right = 862.0
margin_bottom = 40.0
rect_min_size = Vector2( 190, 0 )
theme = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="PokemonSettings/Panel3"]
margin_right = 242.0
margin_bottom = 40.0

[node name="Save" type="Button" parent="PokemonSettings/Panel3/HBoxContainer"]
margin_right = 34.0
margin_bottom = 40.0
disabled = true
text = "Save"

[node name="SaveAs" type="Button" parent="PokemonSettings/Panel3/HBoxContainer"]
margin_left = 38.0
margin_right = 92.0
margin_bottom = 40.0
disabled = true
text = "Save As"

[node name="Load" type="Button" parent="PokemonSettings/Panel3/HBoxContainer"]
material = SubResource( 19 )
margin_left = 96.0
margin_right = 173.0
margin_bottom = 40.0
text = "Load Move"

[node name="moveOpen" type="Label" parent="."]
margin_left = 628.0
margin_top = 51.0
margin_right = 876.0
margin_bottom = 79.0
theme = ExtResource( 1 )
text = "Editing: (NONE)"

[connection signal="pressed" from="TimelineControls/PlayButton" to="." method="playAnimation"]
[connection signal="pressed" from="TimelineControls/ZoomIn" to="." method="changeZoom" binds= [ true ]]
[connection signal="pressed" from="TimelineControls/ZoomOut" to="." method="changeZoom" binds= [ false ]]
[connection signal="value_changed" from="PokemonSettings/Panel/PlayerPokemonID" to="." method="_PlayerPokemonID_change"]
[connection signal="pressed" from="PokemonSettings/Panel/PlayerMouthPos" to="." method="startMouthPosCapture" binds= [ true ]]
[connection signal="value_changed" from="PokemonSettings/Panel2/EnemyPokemonID" to="." method="_EnemyPokemonID_change"]
[connection signal="pressed" from="PokemonSettings/Panel2/EnemyMouthPos" to="." method="startMouthPosCapture" binds= [ false ]]
[connection signal="pressed" from="PokemonSettings/Panel3/HBoxContainer/Save" to="." method="saveAnimation"]
[connection signal="pressed" from="PokemonSettings/Panel3/HBoxContainer/Load" to="." method="openMoveSelector"]
